--- a/css/style.css
+++ b/css/style.css
@@ -504,7 +504,7 @@ section.tab-section {
     border: 1px solid transparent;
     display: inline-block;
     margin: 0 0 -1px;
-    padding: 10px 30px;
+    padding: 10px;
     text-align: center;
     text-transform: uppercase;
     background-color: #F8F8FA;
